--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,46 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+label {
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
+
 
 .card {
+  background-color: rgb(130, 130, 82) ;
   padding: 2em;
+  border: solid 1px black;
+  border-radius: 10px;
+
 }
 
-.read-the-docs {
-  color: #888;
+
+
+.form-box {
+  background-color: #e4d1a7;
+  padding: 2rem;
+  border: solid black 0.1rem;
+  border-radius: 1rem;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+input{
+  border-radius: 10px;
+}
+
+form > button{
+  border-radius: 50px;
+  margin-top: 10px;
 }
